--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,6 +1,6 @@
 
 body{
-    font-family: 'Fira Sans Condensed', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
     font-weight: bold;
     margin: 0;
 }
@@ -30,28 +30,46 @@ h1,h2,h3 {
 /*******************Navbar******************/
 
 .css-ciy9n4-MuiPaper-root-MuiAppBar-root{
-    background-color: #1e1a1a;
+    background-color: #2f2f2f;
+    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: 0px 0px 20px 0px rgb(22 21 21) inset, 0 0 0 0 black;
 }
 
 .css-jzk4qw-MuiPaper-root-MuiAppBar-root{
-    background-color: #1e1a1a;
+    background-color: #2f2f2f;
+    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    box-shadow: 0px 0px 20px 0px rgb(22 21 21) inset, 0 0 0 0 black;
+}
+
+.css-134qg7o-MuiButtonBase-root-MuiIconButton-root{
+    background-color: #2f2f2f;
+    box-shadow: -14px -7px 20px 0px rgb(35, 33, 33) inset, 0 0 0 0 rgb(50, 49, 49);
+}
+
+.css-78trlr-MuiButtonBase-root-MuiIconButton-root{
+    color: white;
 }
 
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper{
-    background-color: #8a7f7f;
+    background-color: #2f2f2f;
+    box-shadow: 0px 0px 20px 0px rgb(22 21 21) inset, 0 0 0 0 black;
     color: white;
     font-size: x-large;
     height: fit-content;
     width: fit-content;
 }
 
-.css-11lq3yg-MuiGrid-root{
-    cursor: pointer;
-}
+.css-1ab221l-MuiGrid-root:active {
+    transform: translateY(3px);
+  }
 
 .css-h4y409-MuiList-root{
-    padding-bottom: 90px;
+    padding:15px 20px 15px;
     font-size: 1em;
+}
+
+.css-1ab221l-MuiGrid-root{
+    margin-bottom: 10px;
 }
 
 /*******************Top Container**********************/
@@ -102,13 +120,15 @@ pre{
 	background: radial-gradient( 48% 75% at 37% 36%, #564f4f, #1e1a1a 90% );
     border-radius: 3%;
     margin-left: 2em;
+    border-style: groove;
+    border-color: #919ca129;
 }
 
 .var-container{
     display: flex;
     flex-direction: column;
     font-size: x-large;
-    color: #fd9170;
+    color: white;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 22px;
@@ -116,17 +136,54 @@ pre{
 
 .array-container{
     height: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-bottom-style: groove;
+    border-bottom-color: #919ca129;
 }
 
-/*******************Button**********************/
+.array-span{
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: .33em;
+    letter-spacing: .25em;
+    color: #fd9170
+}
+
+.checked-container{
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.checked-span{
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-left: .33em;
+    letter-spacing: .3em;
+    color: #fd9170
+}
+
+/*******************Button Box**********************/
 
 .button-box{
+    width: 40%;
 	display: flex;
     flex-direction: column;
 	color: white;
     border-right-style: groove;
     border-right-color: #919ca129;
-    padding: 10px;
+    padding: 10px 0px;
+}
+
+.action-buttons{
+    display: flex;
+    padding-bottom: .5em;
+    justify-content: space-evenly;
+    gap: 4px;
 }
 
 button{
@@ -142,28 +199,30 @@ button{
     padding: .5em .8em;
     text-decoration: none;
     text-align: center;
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
     box-shadow: -14px -7px 20px 0px rgb(22, 21, 21) inset, 0 0 0 0 black;
-    
     transition: all 150ms ease-in-out;
 }
 
-button:hover{
-       
-          
-          outline: 0;
-          box-shadow: -14px -7px 20px 0px rgb(22, 21, 21) inset, 10px 4px 20px 0px #1f1f1f;;
-        
-    
-      
+button:hover{       
+    outline: 0;
+    /* box-shadow: -14px -7px 20px 0px rgb(22, 21, 21) inset, 10px 4px 20px 0px #1f1f1f;; */  
 }
 
-button:focus{
-       
-    color: #fff;
-    outline: 0;
-  
+button:active {
+   
+    transform: translateY(3px);
+  }
 
+.refresh-button{
+    padding: .7em .8em;
+}
 
+.sort-button{
+    padding-top: .95em;
+    padding-bottom: .95em;
 }
 
 .css-1p823my-MuiListItem-root{
@@ -173,18 +232,32 @@ button:focus{
 
 /*******************SLIDER******************/
 
+.slider-container{
+    height: 80%;
+    display: flex;
+    border-top-style: groove;
+    border-top-color: #919ca129;
+    padding: .5em 0;
+}
+
 .slider{
-    height: 100%;
     color: white;
     margin-top: .5em;
+    flex-grow: 1;
 }
 
 .slider-label{
-    height: fit-content;
     font-size: 20px;
+    display: flex;
+    color: #fd9170;
     text-align: center;
-    border-top-style: groove;
-    border-top-color: #919ca129;
+    flex-direction: column;
+    writing-mode: vertical-lr;
+    text-orientation: upright;
+    letter-spacing: 15px;
+    margin-left: 0.5em;
+    width: 50%;
+    padding-top: .5em;
 }
 
 .css-fk6q5t-MuiSlider-root{
@@ -212,11 +285,20 @@ button:focus{
 .css-xxsb21-MuiSlider-markLabel{
     color: white;
     left: 44px;
+    font-size: 1rem;
 }
 
 .css-19l5h75-MuiSlider-markLabel{
     color: #fd9170;
     left: 44px;
+    font-size: 1rem;
+}
+
+.css-1wdhkzz-MuiSlider-mark{
+    color: #fd9170;
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
 }
 
 /*********************Tubes********************/
@@ -285,7 +367,7 @@ button:focus{
 
 .current-element {
     --fill-color: red; 
-    --anim-duration: 2s;
+   
     animation-name: move;
     animation-duration: 5s;
 }
@@ -354,7 +436,7 @@ button:focus{
     width: 100%;
     height: calc(var(--skew) * 2);
     background-color: var(--tube-color);
-    background-image: linear-gradient(to left, rgb(0 0 0 / .25), transparent);
+    background-image: linear-gradient(to left, rgb(0 0 0 / .30), transparent);
     border-radius: 50%;
     top: calc(var(--skew) * -1);
 }
@@ -368,8 +450,6 @@ button:focus{
     display: grid;
     justify-items: center;
     text-align: center;
-    /* padding-top: calc(var(--width) * 0.1 + var(--skew));
-    padding-bottom: calc(var(--width) * .1); */
     overflow: hidden;
 }
 
@@ -432,7 +512,7 @@ button:focus{
             rgb(0 0 0 / .25), 
             transparent 50% 70%, 
             rgb(0 0 0 / .25));
-  animation: fill-before var(--anim-duration) linear forwards
+  animation: fill-before 2s linear forwards
 }
 
 .fill::after{
@@ -449,7 +529,7 @@ button:focus{
     background-image: 
         var(--glas-gradient),
         linear-gradient(to left, rgb(0 0 0 / .25), transparent 50%);
-  animation: fill-after var(--anim-duration) linear forwards
+  animation: fill-after 2s linear forwards
 }
 
 @keyframes fill-before{ to { height: var(--fill-end)}}
