--- a/src/css/global.css
+++ b/src/css/global.css
@@ -15,6 +15,7 @@ body{
 
 h1,h2,h3 {
     margin: 0;
+    margin-top: 5px;
     /* font-family: 'Playfair Display', serif; */
     font-family: 'Fira Sans', sans-serif;
     }
@@ -36,19 +37,51 @@ h1,h2,h3 {
 
 /*******************Navbar******************/
 
-.css-ciy9n4-MuiPaper-root-MuiAppBar-root{
-    background-color: #2f2f2f;
-    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    box-shadow: 0px 0px 20px 0px rgb(22 21 21) inset, 0 0 0 0 black;
+.css-hip9hq-MuiPaper-root-MuiAppBar-root{
+    background-color: #1d1d1d;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
+    position: relative;
+}
+
+.in-nav-container{
+    display: flex;
+    justify-content: flex-end;
+    flex-grow: 1;
+}
+
+.css-j9wkuc-MuiAvatar-root{
+    height: fit-content ;
+    width: 55px;
+    padding-top: 3px;
+}
+
+.css-av538e-MuiButtonBase-root-MuiIconButton-root{
+    background: none;
+    box-shadow: none;
+}
+
+.in-nav-container div{
+    cursor: pointer;
+    margin-right: 1em;
+}
+
+.home-link{
+    margin-right: 0px !important;
+}
+
+/* .css-ciy9n4-MuiPaper-root-MuiAppBar-root{
+    background-color: #1d1d1d;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
+    position: relative;
 }
 
 .css-jzk4qw-MuiPaper-root-MuiAppBar-root{
-    background-color: #2f2f2f;
-    transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-    box-shadow: 0px 0px 20px 0px rgb(22 21 21) inset, 0 0 0 0 black;
-}
+    background-color: #1d1d1d;
+    box-shadow: 0px 0px 20px 0px rgb(0 0 0) inset, 0 0 0 0 black;
+    position: relative;
+} */
 
-.css-134qg7o-MuiButtonBase-root-MuiIconButton-root{
+/* .css-134qg7o-MuiButtonBase-root-MuiIconButton-root{
     background-color: #2f2f2f;
     box-shadow: 11px -3px 15px 0px rgb(22, 21, 21) inset, 0 0 0 0 black;
 }
@@ -58,7 +91,7 @@ h1,h2,h3 {
 }
 
 .css-12i7wg6-MuiPaper-root-MuiDrawer-paper{
-    background-color: #2f2f2f;
+    background-color: #373030;
     box-shadow: 0px 0px 20px 0px rgb(22 21 21) inset, 0 0 0 0 black;
     color: white;
     font-size: x-large;
@@ -77,7 +110,37 @@ h1,h2,h3 {
 
 .css-1ab221l-MuiGrid-root{
     margin-bottom: 10px;
+} */
+/*******************Header**********************/
+
+.header{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    text-align: center;
+    padding-bottom: 1em;
+    font-family: 'Playfair Display', serif;
+    width: 100%;
+    height: fit-content;
 }
+
+/*******************Home**********************/
+
+.greeting{
+    text-align: center;
+    line-height: 1.5em;
+    font-size: 1.2em;
+    font-family: 'Playfair Display', serif;
+    position: relative;
+    z-index: 1;
+    padding: 0 40px 0 40px;
+}
+
+.indexContainer{
+    position: relative;
+   height: 100%;
+}
+
 
 /*******************Top Container**********************/
 
@@ -117,18 +180,17 @@ pre{
 .bottom-container{
     display: flex;
     flex-grow: 1;
-    padding-bottom: 25px;
 }
 
 /*******************Side-Display**********************/
 
 .side-display{
 	display: flex;
-	background: radial-gradient( 70% 75% at 69% 35%, #3d3838, #1e1a1a 100% );
-    border-radius: 3%;
+    background: radial-gradient( 68% 75% at 51% 43%, #343232, #000 90% );
+    border-radius: 20%;
     margin-left: 2em;
-    border-style: groove;
-    border-color: #919ca129;
+    margin-bottom: 10px;
+    padding: 1%;
 }
 
 .var-container{
@@ -164,6 +226,7 @@ pre{
     flex-direction: column;
     align-items: center;
     text-align: center;
+    padding-top: 5px;
 }
 
 .checked-span{
@@ -187,12 +250,12 @@ pre{
 
 .action-buttons{
     display: flex;
-    padding: .1em .5em .5em .5em;
+    padding: .1em .35em .5em .5em;
     justify-content: space-evenly;
     gap: 5px;
 }
 
-button{
+.button{
     box-sizing: border-box;
     appearance: none;
     background-color: transparent;
@@ -208,11 +271,11 @@ button{
     font-family: 'Fira Sans', sans-serif;
     font-weight: bold;
     letter-spacing: 1px;
-    box-shadow: 11px -3px 15px 0px rgb(22, 21, 21) inset, 0 0 0 0 black;
+    background: radial-gradient( 82% 100% at 64% 48%, #343232, #040404 90% );
     transition: all 150ms ease-in-out;
 }
 
-button:active {  
+.button:active {  
     transform: translateY(2px);
   }
 
@@ -238,6 +301,7 @@ button:active {
     border-top-style: groove;
     border-top-color: #919ca129;
     padding: .5em 0;
+
 }
 
 .slider{
@@ -309,6 +373,7 @@ button:active {
     width: 70%;
     gap:1em;
     margin-top: auto;
+    margin-bottom: 10px;
 }
 
 .tubes { 
