--- a/src/css/global.css
+++ b/src/css/global.css
@@ -22,6 +22,7 @@ h1,h2,h3 {
 
 h4{
     margin: 0;
+    margin-bottom: 10px;
 }
 
 p{
@@ -176,6 +177,15 @@ p{
 .explanation-title{
     margin-bottom: 5px;
     text-align: center;
+    text-decoration-line: underline;
+}
+
+.explanation-heading{
+    font-weight: 600;
+}
+
+.insertion-explanation-heading{
+    font-weight: 600;
 }
 
 .explanation {
@@ -184,14 +194,54 @@ p{
 }
 
 .explanation-list{
-    list-style-position: inside;
-    padding-left: 0;
+    list-style: none;
+    margin: .5rem 0 0 0;
+    padding-inline-start: 0px;
   }
 
-  .explanation-list li::marker{
-    margin: 0;
+.explanation-list li{
+    margin: .35rem;
+    margin-left: 0;
+}
+
+.explanation-list li::before{
+    position: relative;
+    top: 1px;
+    content: "";
+    background: radial-gradient( 72% 75% at 67% 43%, #7f7a7a, #000 90% );
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    display: inline-block;
+    color: white;
+    margin-right: 0.5rem;
+}
+  
+.insertion-explanation-list{
+    list-style: none;
+    margin: .5rem 0 0 0;
+    padding-inline-start: 0px;
   }
 
+.insertion-explanation-list li{
+    margin: .35rem;
+    margin-left: 0;
+    font-size: 17px;
+    letter-spacing: .01rem;
+}
+
+.insertion-explanation-list li::before{
+    position: relative;
+    top: 1px;
+    content: "";
+    background: radial-gradient( 72% 75% at 67% 43%, #7f7a7a, #000 90% );
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    display: inline-block;
+    color: white;
+    margin-right: 0.5rem;
+}
 
 .checked-variable{
     color: blue;
@@ -206,6 +256,10 @@ p{
 }
 
 /*********************Method********************/
+
+.method{
+    flex-grow: 1;
+}
 
 pre{
     margin: 0.5em 0px 1.5em 0px !important;
@@ -241,12 +295,21 @@ pre{
     margin-bottom: 22px;
 }
 
+.var-container.insertion{
+    justify-content: space-between;
+}
+
 .array-container{
     height: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+.array-container.insertion{
+    height: auto;
+}
+
 
 .array-span{
     margin-top: auto;
@@ -263,6 +326,10 @@ pre{
     align-items: center;
     text-align: center;
     padding-top: 5px;
+}
+
+.checked-container.insertion{
+    flex-grow: 0;
 }
 
 .checked-span{
@@ -404,12 +471,18 @@ pre{
 
 .row{
     display: flex;
+    flex-grow: 1;
     justify-content: center;
     height: 19em;
     width: 70%;
     gap:1em;
     margin-top: auto;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
+}
+
+.row.insertion{
+    height: 18em;
+    margin-bottom: 25px;
 }
 
 .tubes { 
@@ -500,8 +573,8 @@ pre{
 	font-size: 1.15em;
 	text-align: center;
     width: auto;
-    top: 70px;
-    left: 68px;
+    top: 80px;
+    left: 70px;
     border: solid black;
 }
 
