--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1,6 +1,6 @@
 
 body{
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Barlow', sans-serif;
     margin: 0;
     height: 100%;
 }
@@ -16,8 +16,6 @@ body{
 h1,h2,h3 {
     margin: 0;
     margin-top: 5px;
-    /* font-family: 'Playfair Display', serif; */
-    font-family: 'Fira Sans', sans-serif;
     }
 
 h4{
@@ -26,6 +24,7 @@ h4{
 }
 
 p{
+    font-family: 'Playfair Display', serif;
     margin: 0;
 }
 
@@ -45,6 +44,10 @@ p{
 }
 
 /*******************Navbar******************/
+
+.css-r6ewbb-MuiToolbar-root{
+    color: #fff8ba;
+}
 
 .css-hip9hq-MuiPaper-root-MuiAppBar-root{
     background-color: #1d1d1d;
@@ -149,16 +152,6 @@ p{
 
 /*******************Home**********************/
 
-.greeting{
-    text-align: center;
-    line-height: 1.5em;
-    font-size: 1.2em;
-    font-family: 'Playfair Display', serif;
-    position: relative;
-    z-index: 1;
-    padding: 0 40px 0 40px;
-}
-
 .card-container{
     display: flex;
     flex-wrap: wrap;
@@ -168,49 +161,63 @@ p{
 .card{
     display: flex;
     margin: 1em;
-    max-width: 25%;
+    max-width: 30%;
+    /* background-color: #1d1d1d; */
+    /* background-color: #3e3d40; */
+    background-color: #313133;
+    border-radius: 10%;
+}
+
+.card:hover{
+    position: relative;
+    bottom: 15px;
+}
+
+.css-b6lsxj-MuiButtonBase-root-MuiCardActionArea-root{
+    display: flex;
+    flex-direction: column;
+}
+
+.MuiCardActionArea-focusHighlight {
+    background: transparent;
 }
 
 .card span{
-    font-size: 15px;
-    font-weight: bold;
+    font-family: 'Barlow', sans-serif;
+    font-size: 17px;
     line-height: 1.5em;
+    color: #fff8ba;
 }
 
 .css-46bh2p-MuiCardContent-root {
-    padding: 5px 10px 0 10px;
-    font-family: 'fira sans';
+    padding: 5px 10px 15px 10px;
     height: 100%;
     color: white;
 }
 
 .css-o69gx8-MuiCardMedia-root{
     width: fit-content;
-    margin: auto;
+    margin: 3% auto;
 }
 
 .red{
     background-color: #fa4654;
 }
 
-.light-blue{
-    background-color: #29a3fb;
+.card-content{
+    background-color: #3e3d40;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
-.insertion-img{
-    background-color: #1210ed;
+.card-content p{
+    font-family: 'Lato';
+    font-size: 16px;
+    margin-bottom: 15px;
 }
 
-.white{
-    color: #1210ed;
-}
-
-.selection-content{
-    background-color: white;
-    color: #1210ed;
-}
-
-.space-complexity{
+.complexity-container{
     margin-top: auto;
 }
 
@@ -277,6 +284,7 @@ p{
     margin-left: 0;
     font-size: 17px;
     letter-spacing: .01rem;
+    line-height: 1.3em;
 }
 
 .insertion-explanation-list li::before{
@@ -345,8 +353,10 @@ pre{
     background: radial-gradient( 68% 75% at 51% 43%, #343232, #000 90% );
     border-radius: 20%;
     margin-left: 2em;
-    margin-bottom: 10px;
+    margin-bottom: auto;
+    margin-top: auto;
     padding: 1%;
+    padding-bottom: 2%;
     height: 80%;
 }
 
@@ -547,7 +557,6 @@ pre{
 
 .row.insertion{
     height: 18em;
-    margin-bottom: 35px;
 }
 
 .tubes { 
